Remove useless fields on /receitasienge
